<resources>
    <string name="app_name">SpaceBar</string>
    <string name="login">Login</string>
    <string name="Entrar">entrar</string>
    <string name="Senha">senha</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nav">Nav</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_teste">teste</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="configuracoes">Configurações</string>
</resources>