<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.spacebar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_configuracoes"
        android:name="com.example.spacebar.ui.configuracoes.ConfiguracoesFragment"
        android:label="@string/configuracoes"
        tools:layout="@layout/fragment_configuracoes" />


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.spacebar.ui.dashboard.PesquisaUsuarioFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_pesquisa_usuario" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.spacebar.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>